--- a/landing/index.html
+++ b/landing/index.html
@@ -16,7 +16,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Roboto:wght@300;400;500;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Easter Egg Script -->
     <script src="/js/cubi-easter-egg.js"></script>
+    <!-- Twitch Authentication Client -->
+    <script src="/assets/js/twitch-auth-client.js"></script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
