--- a/landing/index.html
+++ b/landing/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Roboto:wght@300;400;500;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Easter Egg Script -->
-    <script src="/assets/js/cubi-easter-egg.js"></script>
+    <script src="/js/cubi-easter-egg.js"></script>
     <!-- Add script before main script loads to initialize environment variables -->
     <script>
       window.ENV = window.ENV || {};
